<resources>
    <string name="app_name">AACViewModelAndRecommandedArchitectureExampleProject</string>

    <!-- UserInfo Fragment -->
    <string name="user_info">유저 정보</string>
    <string name="user_idx">유저 순번 :</string>
    <string name="user_name">유저 이름 :</string>
    <string name="user_email">유저 이메일 :</string>
    <string name="edit_user_info_btn">유저 정보 수정</string>
    <string name="get_user_info_toast">유저 정보를 불러왔습니다.</string>

    <!-- Edit Fragment -->
    <string name="edit_user_info_title">유저 정보 수정</string>
    <string name="edit_user_info_complete_btn">수정 완료</string>
    <string name="edit_user_info_complete_toast">유저 정보 수정이 완료되었습니다.</string>
    <string name="edit_user_info_fail_toast">유저 정보 수정에 실패하였습니다.\n유저 순번에는 숫자만 입력해 주시고\n입력창이 비었는지 확인해주세요.</string>
</resources>