<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <import type="com.khs.aacviewmodelandrecommandedarchitectureexampleproject.model.data.MyData"/>

        <variable
            name="viewModel"
            type="com.khs.aacviewmodelandrecommandedarchitectureexampleproject.viewmodel.UserInfoViewModel" />

        <variable
            name="userIdx"
            type="java.lang.String" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/LightCyan">

        <TextView
            android:id="@+id/text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/edit_user_info_title"
            android:textColor="@color/black"
            android:textSize="36sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/idx_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:paddingHorizontal="12dp"
            app:layout_constraintTop_toBottomOf="@id/text_view">

            <TextView
                android:id="@+id/idx_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/user_idx"
                android:textColor="@color/black"
                android:textSize="21sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>

            <EditText
                android:id="@+id/idx_value_text_view"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:padding="6dp"
                android:inputType="number"
                android:text="@={userIdx}"
                android:textColor="@color/black"
                android:textSize="21sp"
                android:background="@drawable/shape_edit_text"
                app:layout_constraintStart_toEndOf="@id/idx_text_view"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/name_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:paddingHorizontal="12dp"
            app:layout_constraintTop_toBottomOf="@id/idx_layout">

            <TextView
                android:id="@+id/name_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/user_name"
                android:textColor="@color/black"
                android:textSize="21sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>

            <EditText
                android:id="@+id/name_value_text_view"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:padding="6dp"
                android:text="@={viewModel.inputUserInfo.userName}"
                android:textColor="@color/black"
                android:textSize="21sp"
                android:background="@drawable/shape_edit_text"
                app:layout_constraintStart_toEndOf="@id/name_text_view"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/email_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:paddingHorizontal="12dp"
            app:layout_constraintTop_toBottomOf="@id/name_layout">

            <TextView
                android:id="@+id/email_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/user_email"
                android:textColor="@color/black"
                android:textSize="21sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>

            <EditText
                android:id="@+id/email_value_text_view"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:padding="6dp"
                android:inputType="textEmailAddress"
                android:text="@={viewModel.inputUserInfo.userEmail}"
                android:textColor="@color/black"
                android:textSize="21sp"
                android:background="@drawable/shape_edit_text"
                app:layout_constraintStart_toEndOf="@id/email_text_view"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <Button
            android:id="@+id/edit_complete_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="64dp"
            android:padding="16dp"
            android:text="@string/edit_user_info_complete_btn"
            android:textColor="@color/MintCream"
            android:background="@color/black"
            android:onClick="@{() -> viewModel.setUserInfo(userIdx, viewModel.inputUserInfo.userName, viewModel.inputUserInfo.userEmail)}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/email_layout" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>